# tabsmc

./: .gitignore  README.md  README_JAX.md  compute_js_distances.py  compute_js_distances_proper.py  compute_optimal_likelihood.py  compute_smc_js_distances_clean.py  dumpy.py  evaluate_checkpoint_770.py  generate_smc_synthetic_clean.py  generate_synthetic_data.py  io.py  js_distance_vs_time_results.json  js_distances_smc_clean_results.csv  js_distances_smc_clean_results.parquet  plot_js_vs_time.py  plot_js_vs_time_with_smc.py  plot_smc_final.py  plot_training_likelihood_evolution.py  pyproject.toml  run_argmax_imputation_missing.py  smc.py  test_discretization_consistency.py  test_hyperparameter_inference.py  test_io_conversion.py
experiments/: README.md  compute_all_js_distances.py  compute_js_all_datasets.py  debug_ces_sampling.py  diagnose_gpu_memory.py  evaluate_smc_likelihoods.py  evaluate_synthetic_catboost.py  evaluate_synthetic_catboost_v2.py  generate_overfit_synthetic.py  generate_shared_test_set.py  generate_shared_test_set_fixed.py  generate_smc_synthetic.py  overfit_ces_minibatch.py  overfit_ces_minibatch_fixed.py  plot_auc_vs_time.py  plot_gibbs_steps_results.py  plot_js_vs_time_all_datasets.py  plot_js_vs_time_all_datasets_with_baselines.py  plot_js_vs_time_final.py  plot_lmp_vs_ces_all_marginals.py  plot_lpm_vs_ces_marginals.py  plot_marginal_evolution.py  plot_sgd_long_vs_smc_rejuv10.py  plot_smc_ces_marginals.py  plot_smc_pums_results.py  plot_synthetic_results.py  plot_synthetic_wallclock_corrected.py  plot_synthetic_wallclock_results.py  (+16 more)
src/: smc.py
(+35 files in other folders)
