[project]
name = "tabsmc"
version = "0.1.0"
description = "Tabular Sequential Monte Carlo implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]==0.4.24",
    "jaxlib==0.4.24",
    "numpy>=1.24.0,<2",
    "polars>=0.19.0",
    "jaxtyping>=0.2.0",
    "pytest>=8.4.0",
    "ipykernel>=6.29.5",
    "black>=25.1.0",
    "tqdm>=4.67.1",
    "optax==0.1.9",
]

[tool.setuptools.packages.find]
include = ["tabsmc*"]
exclude = ["paper*", "tests*"]
